Fix stretch of image in story row in safari

--- a/src/styles/components/mm/components/_audience.scss
+++ b/src/styles/components/mm/components/_audience.scss
@@ -493,7 +493,7 @@
     }
     picture{
       width:56%;
-      display:flex; 
+      display:block; 
       height:auto;
       min-height: 1px;
       flex: 0 1 auto;       
